MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/OfferLines__c.object-meta.xml
<CustomObject>
    <description>Object to define different offer applied (ADM, SC Waiver, Discount, Reate etc.) based on different conditions when the offer is selected.</description>
    <label>Offer Lines</label>
    <nameField>
        <displayFormat>OL{0000000}</displayFormat>
        <label>Offer Lines Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offers Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>