MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName +&apos; &apos;+ CreatedBy.LastName</formula>
    <label>CreatedByName</label>
    <type>Text</type>
</CustomField>