MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Customer_Specific__c.field-meta.xml
<CustomField>
    <fullName>Customer_Specific__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Specific</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Offers Lines</relationshipLabel>
    <relationshipName>Offers_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>