MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/CustomerSpecificFlag__c.field-meta.xml
<CustomField>
    <fullName>CustomerSpecificFlag__c</fullName>
    <formula>IF(ISBLANK(Customer_Specific__c), FALSE, TRUE)</formula>
    <label>Customer Specific Flag</label>
    <type>Checkbox</type>
</CustomField>