MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CORPORATE</fullName>
            </value>
            <value>
                <fullName>DOMESTIC</fullName>
            </value>
            <value>
                <fullName>INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>VIP Client</fullName>
            </value>
            <value>
                <fullName>VVIP Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>