MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bulk Discount</fullName>
            </value>
            <value>
                <fullName>Wealth Discount</fullName>
            </value>
            <value>
                <fullName>Corporate Discount</fullName>
            </value>
            <value>
                <fullName>Additional Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>