MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Is_Default_Offer__c.field-meta.xml
<CustomField>
    <fullName>Is_Default_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default Offer</label>
    <type>Checkbox</type>
</CustomField>