MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/NumberOfBedrooms__c.field-meta.xml
<CustomField>
    <fullName>NumberOfBedrooms__c</fullName>
    <label>Number Of Bedrooms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>