MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Offer_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Approval_Status__c</fullName>
    <formula>TEXT(OfferName__r.Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Approval Status</label>
    <type>Text</type>
</CustomField>