MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Offer_Line_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Offer_Line_Approval_Status__c</fullName>
    <label>Offer Line Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>