MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferName__c.field-meta.xml
<CustomField>
    <fullName>OfferName__c</fullName>
    <label>Offer Name</label>
    <referenceTo>OffersPromotions__c</referenceTo>
    <relationshipLabel>Offers Lines</relationshipLabel>
    <relationshipName>Offers_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>