MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferNameFormula__c.field-meta.xml
<CustomField>
    <fullName>OfferNameFormula__c</fullName>
    <formula>OfferName__r.OfferName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OfferNameFormula</label>
    <type>Text</type>
</CustomField>