MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferOn__c.field-meta.xml
<CustomField>
    <fullName>OfferOn__c</fullName>
    <description>Offer on Ex ADM</description>
    <label>Offer On</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OfferType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Selling Price</fullName>
            </value>
            <value>
                <fullName>Net Amount</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>ADM Fees</fullName>
            </value>
            <value>
                <fullName>Transfer Charges</fullName>
            </value>
            <value>
                <fullName>Service Charges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>