MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferType__c.field-meta.xml
<CustomField>
    <fullName>OfferType__c</fullName>
    <description>Select the offer type that needs to be given with this offer line</description>
    <inlineHelpText>Select the offer type that needs to be given with this offer line</inlineHelpText>
    <label>Offer Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Discount</fullName>
            </value>
            <value>
                <fullName>Rebate</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Waiver</fullName>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Dari Charges</fullName>
            </value>
            <value>
                <fullName>Car Park</fullName>
                <isActive>false</isActive>
                <label>Car Park</label>
            </value>
            <value>
                <fullName>Rebate/Credit</fullName>
                <isActive>false</isActive>
                <label>Rebate/Credit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>