MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferValue__c.field-meta.xml
<CustomField>
    <fullName>OfferValue__c</fullName>
    <inlineHelpText>Please provide number of years for all the waivers like PM, ADM, SC etc.
Please provide the percentage for discounts &amp; rebate
Please provide the amount for Vouchers, Premium, Points etc</inlineHelpText>
    <label>Offer Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>