MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/OfferValueType__c.field-meta.xml
<CustomField>
    <fullName>OfferValueType__c</fullName>
    <description>OfferValueType</description>
    <label>Offer Value Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OfferOn__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>%</fullName>
            </value>
            <value>
                <fullName>AED</fullName>
            </value>
            <value>
                <fullName>Years</fullName>
                <label>Year/s</label>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>