MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Phase</label>
    <referenceTo>Phase__c</referenceTo>
    <relationshipLabel>Offers Lines</relationshipLabel>
    <relationshipName>Offers_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>