MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/PhaseSpecific__c.field-meta.xml
<CustomField>
    <fullName>PhaseSpecific__c</fullName>
    <formula>IF(ISBLANK(Phase__c), FALSE, TRUE)</formula>
    <label>PhaseSpecific</label>
    <type>Checkbox</type>
</CustomField>