MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/ProjectID__c.field-meta.xml
<CustomField>
    <fullName>ProjectID__c</fullName>
    <formula>OfferName__r.Project__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectID</label>
    <type>Text</type>
</CustomField>