MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/PromoType__c.field-meta.xml
<CustomField>
    <fullName>PromoType__c</fullName>
    <formula>IF( ISPICKVAL( OfferType__c , &apos;Waiver&apos;) ,  TEXT( OfferOn__c ) , 
 IF( ISPICKVAL( OfferType__c , &apos;Additional Discount&apos;) ,  TEXT( DiscountType__c ) , 
 IF( ISPICKVAL( OfferType__c , &apos;Voucher&apos;) ,  VoucherName__c  , 
TEXT( OfferType__c )) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Type</label>
    <type>Text</type>
</CustomField>