MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/PromoValue__c.field-meta.xml
<CustomField>
    <fullName>PromoValue__c</fullName>
    <formula>TEXT(OfferValue__c) + &apos; &apos; + TEXT(OfferValueType__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Value</label>
    <type>Text</type>
</CustomField>