MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/ResidentStatus__c.field-meta.xml
<CustomField>
    <fullName>ResidentStatus__c</fullName>
    <label>Resident Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resident</fullName>
            </value>
            <value>
                <fullName>Non-Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>