MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Subject_for_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Subject_for_Promotion__c</fullName>
    <formula>TEXT(OfferType__c) + &apos; Offer On &apos;+ TEXT(OfferOn__c) +&apos; for the Project:&apos;+ OfferName__r.Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject for Promotion</label>
    <type>Text</type>
</CustomField>