MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Unit_Price_To__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_To__c</fullName>
    <label>Unit Price To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>