MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/UnitModel__c.field-meta.xml
<CustomField>
    <fullName>UnitModel__c</fullName>
    <label>Unit Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitModel</valueSetName>
    </valueSet>
</CustomField>