MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/UnitSpecificFlag__c.field-meta.xml
<CustomField>
    <fullName>UnitSpecificFlag__c</fullName>
    <formula>IF(ISBLANK(Unit__c), FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UnitSpecificFlag</label>
    <type>Checkbox</type>
</CustomField>