MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/VoucherName__c.field-meta.xml
<CustomField>
    <fullName>VoucherName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voucher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>