MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/fields/Waiver_Percent__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Percent__c</fullName>
    <label>Waiver Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>