MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/ADM_Fee_Waiver_Percentage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ADM_Fee_Waiver_Percentage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(OfferType__c,&apos;Waiver&apos;),ISPICKVAL(OfferOn__c,&apos;ADM Fees&apos;), OfferValue__c &gt; 2)</errorConditionFormula>
    <errorMessage>ADM Waiver Percent can&apos;t be more than 2 Percent !</errorMessage>
</ValidationRule>