MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/Freeze_Approved_Offers_Lines.validationRule-meta.xml
<ValidationRule>
    <fullName>Freeze_Approved_Offers_Lines</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( LastModifiedDate ), NOT(ISPICKVAL(Offer_Line_Approval_Status__c,&apos;Not Submitted&apos;)))</errorConditionFormula>
    <errorMessage>We cannot modify the Approved Offer Lines in the System!</errorMessage>
</ValidationRule>