MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/Price_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Price_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNULL(Unit_Price_From__c)),ISNULL( Unit_Price_To__c ))</errorConditionFormula>
    <errorMessage>Please enter Unit Price To value.</errorMessage>
</ValidationRule>