MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/Project_and_Unit_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_and_Unit_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Unit__c)),Phase__r.Project__c &lt;&gt; Unit__c)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Project and Unit not matching..!</errorMessage>
</ValidationRule>