MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/Service_Charge_Waiver_Percent_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Charge_Waiver_Percent_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND ( ISPICKVAL(OfferType__c,&apos;Waiver&apos;),ISPICKVAL( OfferOn__c ,&apos;Service Charges&apos;),ISNULL( Waiver_Percent__c))</errorConditionFormula>
    <errorMessage>Kindly enter the waiver percentage for the service charge!</errorMessage>
</ValidationRule>