MODON MRE BPDEV/force-app/main/default/objects/OfferLines__c/validationRules/Unit_And_Phase_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Unit_And_Phase_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Phase__c)),NOT(ISBLANK(Unit__c)),Phase__r.Id &lt;&gt;  Unit__r.Phase__r.Id)</errorConditionFormula>
    <errorDisplayField>Unit__c</errorDisplayField>
    <errorMessage>Phase &amp; Unit Information not matching..!</errorMessage>
</ValidationRule>